# obs-mock

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  compose.yaml
.github/workflows/: obs-mock.build.yaml
Dockerfiles.d/obs-mock/: Dockerfile
docs/: code-generation.md
obs-mock/: Cargo.toml
obs-mock/src/: auth.rs  handler.rs  main.rs  protocol.rs  state.rs
