[package]
name = "obs-mock"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/mazgi/obs-mock"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
rmp-serde = "1"
env_logger = "0.11"
log = "0.4"
